update meta image

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,7 +43,7 @@ import "../styles/index.css";
     <meta property="og:url" content="https://kratess.dev" />
     <meta
       property="og:image"
-      content="https://yourwebsite.com/path/to/image.jpg"
+      content="https://kratess.dev/images/me.webp"
     />
     <meta property="og:locale" content="en_US" />
 
@@ -56,7 +56,7 @@ import "../styles/index.css";
     />
     <meta
       name="twitter:image"
-      content="https://yourwebsite.com/path/to/image.jpg"
+      content="https://kratess.dev/images/me.webp"
     />
   </head>
   <body class="bg-black space-y-64 md:space-y-96 lg:space-y-128">
