update hover nav

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -70,27 +70,27 @@ import "../styles/index.css";
         <nav class="hidden md:flex-center w-100 h-[128px]">
           <ul class="hidden md:flex space-x-64">
             <li>
-              <a class="text-18" href={"javascript: smoothScroll('about');"}
+              <a class="text-18 hover:underline" href={"javascript: smoothScroll('about');"}
                 >About</a
               >
             </li>
             <li>
-              <a class="text-18" href={"javascript: smoothScroll('projects');"}
+              <a class="text-18 hover:underline" href={"javascript: smoothScroll('projects');"}
                 >Projects</a
               >
             </li>
             <li>
-              <a class="text-18" href={"javascript: smoothScroll('resources');"}
+              <a class="text-18 hover:underline" href={"javascript: smoothScroll('resources');"}
                 >Resources</a
               >
             </li>
             <li>
-              <a class="text-18" href={"javascript: smoothScroll('interests');"}
+              <a class="text-18 hover:underline" href={"javascript: smoothScroll('interests');"}
                 >Interests</a
               >
             </li>
             <li>
-              <a class="text-18" href={"javascript: smoothScroll('contact');"}
+              <a class="text-18 hover:underline" href={"javascript: smoothScroll('contact');"}
                 >Contact</a
               >
             </li>
