upd opengraph, fix margin

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,10 +41,7 @@ import "../styles/index.css";
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://kratess.dev" />
-    <meta
-      property="og:image"
-      content="https://kratess.dev/images/me.webp"
-    />
+    <meta property="og:image" content="https://kratess.dev/images/me.webp" />
     <meta property="og:locale" content="en_US" />
 
     <!-- Twitter Tags -->
@@ -54,52 +51,46 @@ import "../styles/index.css";
       name="twitter:description"
       content="Full-stack developer skilled in HTML, CSS, JavaScript, React, and Vue. Passionate about user-friendly design, performance optimization, and emerging tech. Fluent in Italian, Romanian, and English, with experience in web apps and blockchain."
     />
-    <meta
-      name="twitter:image"
-      content="https://kratess.dev/images/me.webp"
-    />
+    <meta name="twitter:image" content="https://kratess.dev/images/me.webp" />
   </head>
   <body class="bg-black space-y-64 md:space-y-96 lg:space-y-128">
     <!-- START -->
     <div>
       <!-- HEADER -->
       <header>
-        <nav class="container md:hidden h-[96px] flex justify-start items-center">
-          <span class="text-18">&lt;kratess.dev /&gt;</span>
+        <nav
+          class="container md:hidden h-[96px] flex justify-start items-center"
+        >
+          <span class="text-18 leading-1.0">&lt;kratess.dev /&gt;</span>
         </nav>
         <nav class="hidden md:flex-center w-100 h-[128px]">
           <ul class="hidden md:flex space-x-64">
-            <li>
-              <a class="text-18 hover:underline" href={"javascript: smoothScroll('about');"}
-                >About</a
-              >
-            </li>
-            <li>
-              <a class="text-18 hover:underline" href={"javascript: smoothScroll('projects');"}
-                >Projects</a
-              >
-            </li>
-            <li>
-              <a class="text-18 hover:underline" href={"javascript: smoothScroll('resources');"}
-                >Resources</a
-              >
-            </li>
-            <li>
-              <a class="text-18 hover:underline" href={"javascript: smoothScroll('interests');"}
-                >Interests</a
-              >
-            </li>
-            <li>
-              <a class="text-18 hover:underline" href={"javascript: smoothScroll('contact');"}
-                >Contact</a
-              >
-            </li>
+            <a
+              class="text-18 leading-1.0 hover:underline"
+              href={"javascript: smoothScroll('about');"}>About</a
+            >
+            <a
+              class="text-18 leading-1.0 hover:underline"
+              href={"javascript: smoothScroll('projects');"}>Projects</a
+            >
+            <a
+              class="text-18 leading-1.0 hover:underline"
+              href={"javascript: smoothScroll('resources');"}>Resources</a
+            >
+            <a
+              class="text-18 leading-1.0 hover:underline"
+              href={"javascript: smoothScroll('interests');"}>Interests</a
+            >
+            <a
+              class="text-18 leading-1.0 hover:underline"
+              href={"javascript: smoothScroll('contact');"}>Contact</a
+            >
           </ul>
         </nav>
       </header>
 
       <!-- MAIN -->
-      <div class="container md:mt-[45px] lg:mt-[75px] space-y-16">
+      <div class="container md:mt-[41px] lg:mt-[73px] space-y-16">
         <div class="d-flex flex-col">
           <h1
             class="text-48 md:text-64 lg:text-96 xl:text-128 font-medium leading-1.0 text-white"
