add preload, prefetch

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -52,6 +52,64 @@ import "../styles/index.css";
       content="Full-stack developer skilled in HTML, CSS, JavaScript, React, and Vue. Passionate about user-friendly design, performance optimization, and emerging tech. Fluent in Italian, Romanian, and English, with experience in web apps and blockchain."
     />
     <meta name="twitter:image" content="https://kratess.dev/images/me.webp" />
+
+    <!-- Preload -->
+    <link
+      rel="preload"
+      href="/fonts/Fira_Mono/FiraMono-Regular.ttf"
+      as="font"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preload"
+      href="/fonts/Fira_Mono/FiraMono-Medium.ttf"
+      as="font"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preload"
+      href="/fonts/Open_Sans/OpenSans-Regular.ttf"
+      as="font"
+      crossorigin="anonymous"
+    />
+
+    <link rel="preload" href="/images/me.webp" as="image" type="image/webp" />
+    <link rel="prefetch" href="/images/separator_projects.webp" as="image" />
+    <link rel="prefetch" href="/images/lume.webp" as="image" />
+    <link rel="prefetch" href="/images/newlife.webp" as="image" />
+    <link rel="prefetch" href="/images/separator_resources.webp" as="image" />
+    <link rel="prefetch" href="/images/me2.webp" as="image" />
+
+    <link
+      rel="prefetch"
+      href="/svgs/burst-star.svg"
+      as="image"
+      type="image/svg+xml"
+    />
+    <link
+      rel="prefetch"
+      href="/svgs/topographic.svg"
+      as="image"
+      type="image/svg+xml"
+    />
+    <link
+      rel="prefetch"
+      href="/svgs/spiral.svg"
+      as="image"
+      type="image/svg+xml"
+    />
+    <link
+      rel="prefetch"
+      href="/svgs/topographic2.svg"
+      as="image"
+      type="image/svg+xml"
+    />
+    <link
+      rel="prefetch"
+      href="/svgs/looper.svg"
+      as="image"
+      type="image/svg+xml"
+    />
   </head>
   <body class="bg-black space-y-64 md:space-y-96 lg:space-y-128">
     <!-- START -->
