--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ import "../styles/index.css";
     />
     <meta
       name="keywords"
-      content="Full-Stack Developer, Front-End Developer, Back-End Developer, Web Development, HTML, CSS, JavaScript, React, Vue, Blockchain, User Experience, UX Design, Full-Stack Engineer, Software Development, UI/UX, Software Engineering"
+      content="kratess, kratess.dev, kratess developer, Full-Stack Developer, Front-End Developer, Back-End Developer, Web Development, HTML, CSS, JavaScript, React, Vue, Blockchain, User Experience, UX Design, Full-Stack Engineer, Software Development, UI/UX, Software Engineering"
     />
     <meta name="robots" content="index, follow" />
     <meta name="author" content="Doru Parvu" />
