--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -600,7 +600,7 @@ import "../styles/index.css";
         <div id="contact" class="container flex flex-col items-end space-y-32">
           <span
             class="bg-black text-24 leading-1.0 border-l border-r border-white px-16 py-8"
-            >/Resources</span
+            >/Contact</span
           >
           <p class="max-w-[360px] text-right pl-8 lg:pl-12 xl:pl-16">
             <em>Building</em> tomorrow's technology <em>today</em>, with code
